compiler/test-data/parser/theme/errors/missing_theme_name.frel
module test

theme {
    padding : u32 = 16
}
